# biao-short-novels

./: .firebaserc  .gitignore  README.md  close-existing-prs.py  hugo.toml  hugo.yml  pyproject.toml  s_parse.py  scrape.py  scrape_1.py  scrape_1_a.py  scrape_2.py  scrape_2_a.py  scrape_3.py  z0_fix-names.py
.idx/: dev.nix
content/: index0.md
generated_html/: 2247483846.html  2247483853.html  2247483859.html  2247483875.html  2247483880.html  2247483890.html  2247483979.html  2247484011.html  2247484016.html  2247484021.html  2247484027.html  2247484033.html  2247484037.html  2247484042.html  2247484053.html  2247484058.html  2247484063.html  2247484069.html  2247484074.html  2247484084.html  2247484094.html  2247484099.html  2247484105.html  2247484110.html  2247484115.html  2247484120.html  2247484126.html  2247484131.html  2247484137.html  2247484142.html  2247484147.html  2247484152.html  2247484158.html  2247484163.html  2247484168.html  2247484173.html  2247484179.html  2247484184.html  2247484189.html  2247484199.html  (+67 more)
generated_json/: 2247483853.json  2247484063.json  2247484179.json  2247484310.json  2247484344.json  2247484360.json  2247484365.json  2247484370.json  2247484376.json  2247484381.json  2247484386.json  2247484391.json  2247484396.json  2247484402.json  2247484407.json  2247484415.json  2247484420.json  2247484430.json  2247484435.json  2247484440.json  2247484449.json  2247484456.json  2247484465.json  2247484470.json  2247484477.json  2247484482.json  2247484487.json  2247484492.json  2247484498.json  2247484503.json  2247484508.json  (+13 more)
(+197 files in other folders)
