[project]
name = "biao-short-novels"
version = "2025.3.31.0"
description = "scrape the mini novels"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sodatools>=2025.2.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
packages = ["py_scripts"]
exclude = ["__pycache__", "*.pyc", "*.exe"]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["py_scripts"]
exclude = ["__pycache__", "*.pyc"]

[project.scripts]
scrape_biao = "py_scripts.main:main"
